fixed the cropper & modal size issue

--- a/frontend/src/Components/CropImage.css
+++ b/frontend/src/Components/CropImage.css
@@ -1,4 +1,4 @@
-.cropper-wrap-box {
+/* .cropper-wrap-box {
     max-height: 473px !important;
 }
 
@@ -8,7 +8,7 @@
 
 .cropper-container {
     height: 473px !important;
-}
+} */
 
 .crop__button {
     background-image: linear-gradient(to right,var(--tw-gradient-stops));
